<resources>
    <string name="app_name">Mood Diary</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_list">List</string>
    <string name="title_calender">Calender</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_diary_text">일기 작성</string>
    <!-- add -->
    <string name="add_title">제목을 입력해주세요(최대 16자)</string>
    <string name="add_content">오늘은 어떤일이 있었나요?</string>
    <string name="add_addbtn">작성 완료</string>
    <!-- write -->
    <!-- choice -->
    <string name="chioce_title">오늘 기분을 선택해주세요!</string>
    <string name="choice_veryhappy">Very Happy</string>
    <string name="choice_happy">Happy</string>
    <string name="choice_soso">Soso</string>
    <string name="choice_sad">Sad</string>
    <string name="choice_angry">Angry</string>
    <!-- setting -->
    <string name="setting_title">setting</string>
    <string name="setting_noti">알림 허용</string>
    <string name="setting_noti_content">ℹ️알림은 뭐할때 오나요?</string>
    <string name="setting_version">v 1.3</string>
    <string name="setting_email">report : kjw111097@gmail.com</string>
    <!-- detail -->
    <string name="detail_title">title</string>
    <string name="detail_date">date</string>
    <string name="detail_content">content</string>
    <!-- listitem -->
    <string name="listitem_title">Title</string>
    <string name="listitem_date">date</string>


</resources>