<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.third_grade_project.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigationHome_to_navigationList"
            app:destination="@id/navigation_list" />

    </fragment>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.third_grade_project.view.fragment.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.example.third_grade_project.view.fragment.CalenderFragment"
        android:label="@string/title_calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.third_grade_project.view.fragment.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" />
</navigation>