<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="myChoiceViewModel"
            type="kim.jong.third_grade_project.viewModel.ChoiceViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".view.ChoiceActivity">

    <TextView
        android:id="@+id/choice_background"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:background="@drawable/detail_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/choice_title_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/chioce_title"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/choice_background" />

    <LinearLayout
        android:id="@+id/very_happy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice_title_Tv">

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:onClick="@{()->myChoiceViewModel.choiceVeryHappy()}"
            android:background="@drawable/very_happy_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/choice_veryhappy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/happy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice_title_Tv">

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:onClick="@{()->myChoiceViewModel.choiceHappy()}"
            android:background="@drawable/happy_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/choice_happy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/soso_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/very_happy_btn">

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:onClick="@{()->myChoiceViewModel.choiceSoso()}"
            android:background="@drawable/soso_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/choice_soso"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sad_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happy_btn">

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:onClick="@{()->myChoiceViewModel.choiceSad()}"
            android:background="@drawable/sad_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/choice_sad"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/angry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soso_btn">

        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:onClick="@{()->myChoiceViewModel.choiceAngry()}"
            android:background="@drawable/angry_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/choice_angry"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>